login authentication done

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -14,7 +14,7 @@
         <img src="../img/bg.svg" width="500px" />
       </div>
       <div class="login-content flex flex-start">
-        <form action="index.html">
+        <form  id="loginForm">
           <img src="../img/avatar.svg" height="100px" />
           <h2 class="title">Welcome</h2>
           <div class="grid input-div ">
