--- a/Pages/todo.html
+++ b/Pages/todo.html
@@ -16,12 +16,12 @@
         <h1>My To Do List</h1>
     </header>
     <form action="" class="flex center">
-        <input type="text" class="todo-input">
-        <button class="todo-button" type="submit">
+        <input type="text" class="todo-input" id="todo-input">
+        <button class="todo-button" id="todo-button" type="submit">
             <i class="fas fa-plus-circle fa-lg" ></i>
         </button>
         <div class="select">
-            <select name="todos" class="filter-todo">
+            <select name="todos" class="filter-todo" id="filter-todo">
                 <option value="all">All</option>
                 <option value="completed">Completed</option>
                 <option value="incomplete">Incomplete</option>
@@ -30,7 +30,7 @@
     </form>
 
     <div class="flex center">
-        <ul class="todo-list"></ul>
+        <ul class="todo-list" id="todo-list"></ul>
     </div>
     <script src="../Scripts/todo.js"></script>
 </body>
