--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -27,6 +27,15 @@
             </div>
           </div>
           <div class="grid input-div ">
+            <div class="flex center color-i">
+              <i class="fas fa-user"></i>
+            </div>
+            <div class="div">
+              <h5>email</h5>
+              <input type="text" class="input" id="email" />
+            </div>
+          </div>
+          <div class="grid input-div ">
             <div class="flex center color-i ">
               <i class="fas fa-lock"></i>
             </div>
@@ -35,12 +44,13 @@
               <input type="password" class="input" id="password" />
             </div>
           </div>
-          <a href="/Pages/signup.html">Forgot Password?</a>
-          <input type="submit" class="btn" value="Login" />
+          <input type="submit" class="btn" value="SignUp" />
         </form>
       </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../Scripts/signup.js"></script>
+
     <script src="../Scripts/api.js"></script>
-    <script src="../Scripts/index.js"></script>
   </body>
 </html>
